--- a/wisata9.html
+++ b/wisata9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Orang Jepang Saja Iri dengan Pariwisata Indonesia</title>
+	<title>Mencicipi Kuliner Hiu? Jangan Nekat, Ini Alasannya...</title>
 	<link rel="stylesheet" type="text/css" href="nav_dropdown.css">
 	<link rel="shortcut icon" href="camera.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -114,17 +114,23 @@
 		
 		
 			<div class="konten">
-				<div class="judul_artikel">Orang Jepang Saja Iri dengan Pariwisata Indonesia</div>
-				<img src="img/wisata/wisata10_780x390.jpg" alt="" title="Sabtu, 23 Mei 2015 | 15:17 WIB" />
-				<p>JAKARTA, KOMPAS.com — Direktur Representatif Sumbosha Publication Inc Shiedo Kuroda mengatakan iri dengan potensi pariwisata Indonesia. Ia juga mengaku melihat kemudahan visa untuk wisatawan asing. </p>
-				<p>Hal itu ia ungkapkan saat penandatanganan “Basic Agrement Regarding Tourism Business Aliance” di Gedung Sapta Pesona, Jakarta, Jumat (22/5/2015). Oleh karena itu, berdasarkan dua potensi tersebut dan dukungan Pemerintah Indonesia, ia berharap dapat menarik wisatawan asing, khususnya Jepang.</p>
-				<p>Shombusa Inc bersama PT U Conectivity Service (UCS) Group mengembangkan sebuah aplikasi mobile dengan konten pariwisata. Aplikasi ini diharapkan dapat meningkatkan kunjungan wisatawan Jepang ke Indonesia.</p>
-				<p>Penyediaan teknologi berupa aplikasi dan konten untuk pariwisata merupakan hasil kerja sama kedua belah pihak. Aspek pendukung seperti informasi hotel, kuliner, tiket pesawat, lokasi pariwisata, dan lokasi ATM juga akan tersedia.</p>
-				<p>Menteri Pariwisata Arief Yahya pun menyambut baik aplikasi mobile ini. “Tujuh puluh persen orang telah menggunakan media digital. Strategi media kita yaitu konvergensi. Elektronik dan non-elektronik. Own media seperti website umumnya,” kata Arief Yahya saat memberikan sambutan dalam penandatanganan “Basic Agreement Regarding Tourism Business Aliance” di Gedung Sapta Pesona, Jakarta, Jumat (22/5/2015).</p>
-				<p>Aplikasi mobile tersebut akan berisikan konten pariwisata yang akan membantu wisatawan Jepang. Arief mengatakan bahwa konten yang kuat membuat sebuah komunitas. Kemudian, komunitas yang telah terbentuk nanti akan dapat dikomersialkan. </p>
-				<p>“Konten nomor satu adalah video sebesar 40 persen. Kemudian foto sebesar 35 persen dan tulisan 25 persen,” katanya.</p>
-				<p>Lanjutnya, Arief menjelaskan keuntungan yang akan didapat dari aplikasi tersebut melalui tiga cara. Pertama, didapat dari iklan; kedua, dari transaksi; dan subscribe dari para pengguna setia.</p>
-				<p>“Fokus nanti ada tiga destinasi, yaitu Bali, Kepulauan Riau, dan Jakarta. Wisatawan yang pergi ke Bali hanya 45 persen, ke Jakarta 40 persen, dan 15 persen ke Kepulauan Riau. Target harus dapat menarik 10 juta wisatawan,” kata Arief.</p>
+				<div class="judul_artikel">Mencicipi Kuliner Hiu? Jangan Nekat, Ini Alasannya...</div>
+				<img src="img/wisata/wisata9_780x390.jpg" alt="" title="Mencicipi Kuliner Hiu? Jangan Nekat, Ini Alasannya..." />
+				<p>Rabu, 20 Mei 2015 | 16:09 WIB</p>
+				<p>JAKARTA, KOMPAS.com - Beberapa waktu lalu, masyarakat khususnya para pegiat lingkungan sempat dihebohkan dengan tayangan kuliner Tongseng Hiu di salah satu televisi swasta Indonesia. Protes keras bergulir lantaran hiu saat ini tidak dianjurkan untuk dikonsumsi mengingat keberadaannya yang sudah terancam punah.</p>
+				<p>“Ini sangat disesalkan karena di tengah ramainya kampanye untuk melestarikan hiu dengan tidak mengonsumsi sirip hiu, justru menayangkan tongseng hiu yang bisa merangsang pemirsa untuk mencoba tongseng tersebut,” ungkap Direktur Komunikasi dan Advokasi WWF Indonesia, Nyoman Iswarayoga, saat dihubungi Kompas Travel, Jumat (15/5/2015).</p>
+				<p>Dengan meningkatnya keinginan masyarakat untuk mengonsumsi hiu maka hal ini akan meningkatkan perburuan hiu di laut. Hal itu tentu akan membuat populasi hiu di laut semakin menipis. Padahal, konsumsi hiu, lanjut Nyoman, pada dasarnya tidak menimbulkan keuntungan bagi manusia.</p>
+				<p>“Lebih banyak kepada prestise, itu sebuah barang yang susah untuk didapat dan berharga mahal sehingga itu menjadi suatu kebanggaan bagi yang mengonsumsinya,” jelas Nyoman.</p>
+				<p>Selain tidak memiliki manfaat khusus, mengkonsumsi ikan hiu justru berpengaruh kepada kesehatan. Sebab, dalam ikan hiu terdapat kandungan merkuri berlebih yang sangat berbahaya bagi kesehatan manusia. Nyoman menjelaskan, berdasarkan pemberitahuan dari Badan Pengawasan Obat dan makanan (BPOM) pada 2009 lalu, hiu mengandung merkuri paling tinggi yang mencapai 1 – 4 ppm.</p>
+				<p>Kandungan merkuri yang tinggi tentu berdampak pada kesehatan manusia, salah satunya terhadap janin. Kandungan merkuri tinggi dapat menembus plasenta sehingga menimbulkan gangguan sistem saraf dan perkembangan janin. Tak hanya itu, merkuri juga dapat mengganggu sistem syaraf, juga mengganggu fungsi hati, ginjal, dan organ lainnya.</p>
+				<p>Maraknya pengonsumsian hiu juga tak lepas dari mitos yang mengatakan sirip hiu memiliki fungsi besar untuk menambah vitalitas dan kemampuan seksual. Padahal, menurut pendiri ProFauna, Rosek Nursahid, hal tersebut merupakan mitos belaka berdasarkan data yang ia dapatkan.</p>
+				<p>“Sirip hiu masih diminati sebagai makanan berkelas, namun data terbaru menyebutkan bahwa mengkonsumsi sirip hiu itu justru bisa mengancam kemandulan pria,” jelas Rosek.</p>
+				<p>Senada dengan Nyoman dan juga Rosek, pemerhati konservasi alam dan mantan pembawa acara program perjalanan, Riyanni Djangkaru turut menyayangkan konsumsi ikan hiu yang sampai saat ini masih dilakukan beberapa pihak. Sebab, selain berdampak buruk bagi kesehatan, mengkonsumsi hiu juga turut andil merusak ekosistem yang ada.</p>
+				<p>“Peran dia (hiu) di lautan itu sebagai dokter laut salah satunya, maka dia memakan ikan-ikan yang sakit jadi dimakanin sama dia,” kata Riyanni.</p>
+				<p>Lebih lanjut Riyanni menjelaskan, spesies ikan pemburu di laut umumnya hanya bisa memakan ikan lain yang terletak satu tingkat atau beberapa tingkat di bawahnya sesuai dengan piramida ekosistem. Namun, keistimewaan hiu bisa memakan hingga spesies-spesies lain jauh di bawah letak piramida.</p>
+				<p>“Hiu itu bisa makan jauh banget dari tingkat paramidanya dia, dengan begitu dia menjaga stabiilitas dari masing-maisng spesies,” sambungnya.</p>
+				<p>Dengan upaya terus menghimbau masyarakat akan bahayanya mengkonsumsi hiu tak hanya bagi kesehatan, tetapi juga bagi lingkungan, para pegiat lingkungan ini berharap masyarakat luas bisa paham alasan-alasan mengapa hiu tak layak dikonsumsi. Di samping itu, Riyanni menambahkan fungsi khusus para “dokter laut” tersebut yang ternyata berdampak luas bagi kehidupan.</p>
+				<p>“Justru yang harus diperhatikan justru spesie-spesies yang tugasnya menjaga variasi ikan dan memberi pemasukan juga buat nelayan, memberi variasi untuk kita juga yang makan, dan masukan buat negara,” tutupnya.</p>
 			</div>
 			
 			
