--- a/wisata5.html
+++ b/wisata5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Sepuluh Tahun Lalu, Turis Tak Datang ke 5 Tempat Ini</title>
+	<title>Bertemu Soba, Mi Sehat dari Negeri Sakura</title>
 	<link rel="stylesheet" type="text/css" href="nav_dropdown.css">
 	<link rel="shortcut icon" href="camera.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -114,31 +114,18 @@
 		
 		
 			<div class="konten">
-				<div class="judul_artikel">Sepuluh Tahun Lalu, Turis Tak Datang ke 5 Tempat Ini</div>
-				<img src="img/wisata/wisata8_780x390.jpg" alt="" title="Sepuluh Tahun Lalu, Turis Tak Datang ke 5 Tempat Ini" />
-				<p>Minggu, 24 Mei 2015 | 15:43 WIB</p>
-				<p>KOMPAS.com - Sepuluh tahun lalu, beberapa tempat ini mungkin tidak pernah masuk dalam daftar destinasi wisata yang patut. Suasana yang tidak kondusif, khususnya di bidang keamanan, minimnya infrastruktur, serta belum tereksposnya suatu tempat wisata menjadi faktor utama tempat-tempat ini tidak dipilih wisatawan sebagai destinasi wisata. Namun, beberapa wilayah sudah mulai berbenah dan membuka diri bagi kehadiran wisatawan. Berikut lima destinasi Asia yang mulai ramai dikunjungi dalam sepuluh tahun terakhir.</p>
-				<p>Myanmar</p>
-				<p>Sempat disebut-sebut sebagai negara kedua yang paling terisolasi di dunia setelah Korea Utara, Myanmar kini telah mendapat perhatian dan juga kunjungan dari wisatawan asing selama tiga tahun terakhir. </p>
-				<p>Setelah junta militer melepaskan kendalinya dari pemerintah Myanmar pada 2011, pariwisata Myanmar mulai meningkat. Meski begitu, banyak daerahnya yang masih terlarang untuk wisatawan. Juga asih banyak pula daerah yang membutuhkan pembangunan infrastruktur dan juga transportasi. Namun, tak lantas wisatawan mengurungkan niat mereka untuk menjelajahi negara yang indah ini. (Baca juga: Yuk, Berwisata di Negeri Tanah Emas Myanmar)</p>
-				<p>Shutterstock Pantai Tanggala, Sri Lanka</p>
-				<p>Sri Lanka</p>
-				<p>Setelah mengalami perang saudara selama 25 tahun dan baru berakhir pada 2009, Sri Lanka muncul sebagai salah satu destinasi wisata dunia. Gabungan pantai, satwa liar, warisan situs budaya dan sejarah luar biasa namun belum terjamah yang dimiliki negara ini. </p>
-				<p>Hal ini membuat Sri Lanka menjadi salah satu destinasi wisata yang paling dicari para wisatawan yang sedang mencari wilayah baru untuk dijelajahi. Menurut Pacific Asia Travel Association (PATA), sebanyak 1,27 juta wisatawan asing sudah megunjungi Sri Lanka pada 2013. Angka tersebut ditargetkan mencapai 2,5 juta pada 2016 nanti, setelah sebelumnya jumlah wisatawan hanya sekitar 549 ribu pada 2005 silam. (Baca juga: Wisata ke Sri Lanka, Kuil Emas Sampai Pantai Perawan)</p>
-				<p>Telegraph Pemerintah Korea Utara kini tengah mengembangkan wisata baharinya, dalam hal ini wisata selancar di pesisir timur negeri itu. Korea Utara</p>
-				<p>Meski beberapa negara masih memperingatkan warganya jika ingin melakukan perjalanan wisata ke Korea Utara, negara ini memang mulai terbuka bagi pariwisata dunia. Walaupun dengan aturan yang ketat dan wisatawan harus siap dengan pemandangan yang benar-benar terbatas.</p>
-				<p>Namun, para wisatawan yang penasaran pada negara yang tertutup itu membuat jumlah kunjungan ke Korea Utara terus meningkat. Menurut berita dari LA Times, agen perjalanan memperkirakan saat ini sebanyak 4.000 hingga 6.000 orang barat mengunjungi Korea Utara setiap tahunnya, dibandingkan dengan perkiraan 10 tahun lalu yang menyebutkan sebanyak 700 orang.</p>
-				<p>Surat kabar lain juga menyebutkan kebanyakan turis yang datang ke Korea Utara merupakan wisatawan Tiongkok, yakni sebanyak 237.000 orang pada 2012 lalu. Negara yang sebelumnya merupakan negara yang tak terjamah pariwisata ini merupakan destinasi yang dinantikan bagi wisatawan. (Baca juga: Mau Coba Pelesir ke Korea Utara?)</p>
-				<p>Photographic Art Viet Nam / Shutterstock.com Gua Son Doong, Quang Binh, </p>
-				<p>Vietnam</p>
-				<p>Pariwisata Vietnam mulai berkembang sejak akhir tahun 1990-an. Negara ini semakin terbuka, namun sebuah gua yang terletak di Vietnam Tengah tepatnya di Taman Nasional Phong Nha-Ke Bang baru pertama kali dijelajahi pada 2009. Sebelumnya taman nasional ini bukanlah sebuah daya tarik bagi wisatawan.</p>
-				<p>Gua itu adalah gua Son Doong di Vietnam yang merupakan gua terbesar di dunia. Beberapa perubahan terjadi setelah kegiatan eksplorasi terjadi di kawasan tersebut. Tak hanya di Son Doong, tapi juga gua-gua besar lainnya di taman nasional itu. </p>
-				<p>Jika melihat ukuran dan bentuk gua-gua bawah tanah yang besar dengan struktur-struktur yang unik, sungai dan kondisi Son Doong itu sendiri, serta hutan yang mendiami wilayah tersebut membuat pengunjung tidak menyangka jika sedang berada di bumi. Taman Nasional Phong Nha-Ke Bang akan semakin banyak dikunjungi wisatawan bila akses menuju ke sana juga semakin mudah. (Baca juga: Panduan Mini Wisata ke Vietnam)</p>
-				<p>Shutterstock Masjid Nasir al-Mulk, Shiraz, Iran</p>
-				<p>Iran</p>
-				<p>Iran diam-diam menjadikan dirinya sebagai destinasi wisata berpotensi besar. Situs perjalanan Gogobot menyebut Iran sebagai destinasi wisata baru yang tengah naik daun. Bahkan Iran menduduki peringkat pertama dalam daftar "10 Negara Terbaik" untuk dikunjungi pada tahun 2015 menurut Rough Guide.</p>
-				<p>Menurut sebuah situs perjalanan, Iran baru-baru ini melaporkan kenaikan jumlah wisatawan dari Eropa yang mencapai 200 persen. Kenaikan itu bisa jadi merupakan efek dari mencairnya hubungan Iran dengan negara-negara barat. Hal itu cukup menjadi batu lompatan untuk sebuah negara yang dulunya dihindari orang barat pada tahun 2005. </p>
-				<p>Iran menawarkan beragam situs wisata dan aktivitas lain yang ramah terhadap wisatawan mulai dari reruntuhan kuno hingga lereng untuk bermain ski di Tehran. Pada Februari tahun ini, Iran baru saja meluncurkan sebuah pameran pariwisata internasional dengan slogan “You’re invited” (Anda diundang)</p>
+				<div class="judul_artikel">Bertemu Soba, Mi Sehat dari Negeri Sakura</div>
+				<img src="img/wisata/wisata5_780x390.jpg" alt="" title="Bertemu Soba, Mi Sehat dari Negeri Sakura" />
+				<p>Selasa, 9 Juni 2015 | 09:07 WIB</p>
+				<p>AKARTA, KOMPAS.com – Banyak yang mengira, seluruh kandungan mi adalah sama. Kandungan karbohidrat yang tinggi tak jarang membuat mi dipandang sebagai panganan yang tidak sehat.</p>
+				<p>Namun, buang jauh-jauh pemikiran itu jika bertemu dengan soba. Salah satu varian mi dari Negeri Sakura ini diklaim sebagai mi tersehat dibanding dengan jenis mi lainnya. “Mi yang lain memakai gandum, tepung gandum. Kalau soba pakai daun, sayuran yang dikeringkan,” ujar CEO Sagami Group, Toshiyuki Kamada, Sabtu (30/5/2015).</p>
+				<p>KOMPAS.COM/MENTARI CHAIRUNISA Chicken Tebasaki, sayap ayam goreng dengan rasa asin ditambah dengan taburan wijen di atasnya ala Sagami Soba.Kamada menjelaskan soba terbuat dari buckwheat, sejenis gandum yang mengandung asam amino dan kaya akan flavonoids. Kelebihan buckwheat dibanding padi atau jenis gandum lain adalah kandungan protein dan vitamin yang lebih banyak serta kandungan mineral, magnesium besi, zinc, tembaga, dan mangan yang lebih banyak.</p>
+				<p>Mengonsumsi soba secara berkala juga dipercaya bisa membantu menjaga dinding pembuluh darah awet muda serta mengontrol tekanan darah. Hal itu disebabkan kandungan glukosa yang lebih rendah dalam soba.</p>
+				<p>KOMPAS.COM/MENTARI CHAIRUNISA Tezaru Soba dari Sagami Soba, soba dingin yang disajikan bersama tempura.</p>
+				<p>“Selain melancarkan peredaran darah, soba juga rendah kalori, juga anti kolesterol, anti aging juga,” lanjut Kamada.</p>
+				<p>Tak hanya dipercaya baik untuk kesehatan, soba juga diyakini dapat menambah umur panjang bagi masyarakat Jepang. Terdapat sebuah budaya tradisional untuk mengonsumsi soba di Jepang yang disebut Toshikoshi-Soba. Bentuk soba yang kecil dan panjang dimaknai sebagai umur panjang dengan penuh kesehatan dan keberuntungan yang kekal. Toshikoshi-Soba biasa dilakukan saat tahun baru.</p>
+				<p>KOMPAS.COM/MENTARI CHAIRUNISA Spicy Beef Soba, varian soba panas dengan sensasi rasa pedas.</p>
+				<p>Keunikan lain adalah cara memakan soba. Soba yang bisa disajikan dalam dua cara, yakni panas dan juga dingin, memiliki cara tersendiri untuk menyantapnya. Masyarakat Jepang biasanya memakan soba dengan cara menyedot soba beserta kuahnya hingga menghasilkan bunyi “slurp”. Meskipun di beberapa negara lain kebiasaan ini dianggap tidak wajar, namun bagi masyarakat Jepang cara makan ini dinilai bisa meningkatkan selera makan mereka.</p>
 			</div>
 			
 			
@@ -280,7 +267,7 @@
 		</div>
 		<div class="footer">
 			<h2><a href="index.html">M-News</a></h2>
-			<p>Copyright © 2016 Tugas Kelompok TKPPL TI-D Pagi Mikroskil <a href="http://samhunt.16mb.com">www.servertic.16mb.com</a></p>
+			<p>Copyright &copy; 2016 Tugas Kelompok TKPPL TI-D Pagi Mikroskil <a href="http://samhunt.16mb.com">www.servertic.16mb.com</a></p>
 		</div> <!--/ .footer -->
 	</div>
 </body>
