--- a/wisata3.html
+++ b/wisata3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Siap-siap "Mabuk" Saat Nikmati Es Krim Mabuk Durian</title>
+	<title>Resmi, Wisatawan dari 45 Negara Bebas Visa Kunjungan Wisata Ke Indonesia</title>
 	<link rel="stylesheet" type="text/css" href="nav_dropdown.css">
 	<link rel="shortcut icon" href="camera.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -114,18 +114,24 @@
 		
 		
 			<div class="konten">
-				<div class="judul_artikel">Siap-siap "Mabuk" Saat Nikmati Es Krim Mabuk Durian</div>
-				<img src="img/wisata/wisata4_780x390.jpg" alt="" title="Siap-siap "Mabuk" Saat Nikmati Es Krim Mabuk Durian" />
-				<p>JAKARTA, KOMPAS.com – Es krim menjadi salah satu pilihan saat berwisata kuliner. Dengan rasa manis dan berbagai kreasi olahan, es krim kerap memikat para wisatawan segala umur. Ketika lidah mencecap, timbul perasaan untuk kembali merasakan kelembutan sajian kuliner es krim. Sensasi demikian dapat ditemukan di salah satu stan "Jakarta Fair 2015" Kemayoran, Jakarta.</p>
-				<p>Nama stan ini adalah Kedai Es Krim Gentong. Stan es krim tersebut terletak di dalam lokasi pameran. Setelah berdesak-desakan di tengah, bunyi lonceng yang biasa dikalungkan di leher sapi memanggil untuk merapat ke stan es krim. Ketika berada di depan stan, gambar-gambar es krim menghiasi di dinding. Empat buah gentong membujur membentengi dapur pembuatan es krim.</p>
-				<p>“Kami buka di sini (Jakarta Fair 2015) sudah yang keempat kalinya. Dari tahun 2010 sudah buka. Suara lonceng di sini untuk menarik perhatian pembeli. Kalau di kedai, untuk menandakan ada pembeli,” kata Supervisor Kedai Es Krim Gentong Stan Jakarta Fair 2015 Supriyadi kepada KompasTravel, Minggu (31/5/2015).</p>
-				<p>Kedai Es Krim Gentong menawarkan beberapa pilihan menu. Es krim dapat dinikmati dalam bentuk waffle, roti, maupun cup. Sementara rasa yang ditawarkan yaitu greentea, cokelat, brownis, durian, kopi, alpukat, vanila, dan stroberi. Nama-nama variasi olahan es krim yang hadir di Kedai Gentong seperti Es Mabuk Durian, Es Teler, Es Leci Salju, Es Strawberry Crunch, dan Es Kiwi Stush.</p>
-				<p>KompasTravel mencoba mencicipi menu Es Durian Mabuk yang direkomendasikan oleh Supriyadi. Menurutnya, menu tersebut adalah menu yang paling diminati para pembeli. Dari nama menu es krim tersebut, sudah dapat ditebak jika olahan ini mengambil bahan dasar durian. Para pegawai langsung mengambil es krim untuk disajikan.</p>
-				<p>Kompas.com/Wahyu Adityo Prodjo Pembeli sedang memilih menu kuliner Kedai Es Krim Gentong di Jakarta Fair 2015, Jakarta, Minggu (31/5/2015). Seporsi es mabuk durian kini tersaji di atas gentong. Satu scoop es krim durian bersama daging durian dan susu cokelat pun menghiasi serutan es batu. Legit rasa durian langsung menggigit lidah. Di bawah es krim durian, daging durian nan lembut mengintip untuk segera dicicipi. Susu cokelat telah membeku karena suhu es serut yang dingin.</p>
-				<p>Disebut sebagai Es Mabuk Durian bukan tanpa alasan. Supriyadi menjelaskan penamaan mabuk karena bahan-bahan yang digunakan dalam menu ini. </p>
-				<p>“Jadi bahannya durian rata-rata. Nah, es krimnya saja durian. Daging durian kita pakai jenis Monthong. Durian semua kan tuh yang dimakan. Ya siap-siap mabuk, he-he,” kata Supriyadi sambil tertawa.</p>
-				<p>Untuk menikmati sajian Es Durian Mabuk ini, pengunjung dikenakan harga Rp 28.000. Sementara untuk pilihan es krim dalam bentuk cup, terdapat ukuran 60-400 mililiter (ml). Untuk setiap cup ukuran 60 ml, dikenakan harga Rp 15.000. Sementara untuk cup ukuran besar, 400 ml dikenakan biaya Rp 66.000. Harga variasi es krim lain berkisar Rp 18.000 - 28.000.</p>
-				<p></p>
+				<div class="judul_artikel">Resmi, Wisatawan dari 45 Negara Bebas Visa Kunjungan Wisata Ke Indonesia</div>
+				<img src="img/wisata/wisata3_780x390.jpg" alt="" title="Resmi, Wisatawan dari 45 Negara Bebas Visa Kunjungan Wisata Ke Indonesia" />
+				<p>Jumat, 12 Juni 2015 | 17:39 WIB</p>
+				<p>JAKARTA, KOMPAS.com- Dalam rangka meningkatkan hubungan Republik Indonesia dengan negara lain dan untuk memberikan manfaat dalam pembangunan nasional, Presiden Joko Widodo pada tanggal 9 Juni 2015 telah menandatangani Peraturan Presiden Nomor 69 Tahun 2015 tentang Bebas Visa Kunjungan. “Bebas Visa kunjungan diberikan kepada Orang Asing warga negara dari negara tertentu dan pemerintah wilayah administrasi khusus dari negara tertentu dengan memperhatikan asas timbal balik dan asas manfaat,” bunyi Pasal 2 Perpres tersebut.</p>
+				<p>Seperti dikutip dari situs resmi Sekretariat Kabinet RI (www.setkab.go.id) Kamis (12/6/2015), menurut Perpres ini, Orang Asing warga negara dari negara tertentu dibebaskan dari kewajiban memiliki Visa kunjungan untuk masuk Wilayah Indonesia dalam rangka kunjungan Wista. Selain itu, Orang Asing warga negara dari negara tertentu sebagaimana dimaksud dapat masuk ke Wilayah Indonesia melalui Tempat Pemeriksaan Imigrasi tertentu.</p>
+				<p>Daftar negara tertentu dan Tempat Pemeriksaan Imigrasi tertentu tercantum dalam lampiran Perpres tersebut, yang merupakan bagian tak terpisahkan dari Perpres No. 69 Tahun 2015 itu.</p>
+				<p>“Orang Asing sebagaimana dimaksud diberikan izin tinggal kunjungan untuk waktu paling lama 30 (tiga puluh) hari, dan tidak dapat diperpanjang atau dialihstatuskan menjadi izin tinggal lainnya,” bunyi 4 Ayat (1,2) Perpres tersebut.</p>
+				<p>Dalam hal Orang Asing warga negara dari negara tertentu yang dibebaskan dari kewajiban memiliki Visa kunjungan akan tinggal lebih dari jangka waktu yang telah ditentukan, dan/atau akan melakukan kegiatan selain dalam rangka kunjungan wisata, yang bersangkutan dapat diberikan Visa kunjungan atau Visa kunjungan saat kedatangan sesuai dengan ketentuan peraturan perundang-undangan.</p>
+				<p>Menurut Perpres ini, Orang Asing warga negara dari negara tertentu dan pemerintah wilayah administratif khusus dari negara tertentu yang telah diberikan bebas Visa kunjungan berdasarkan Keputusan Presiden Nomor 18 Tahun 2003 sebagaimana telah diubah beberapa kali terakhir dengan Peraturan Presiden Nomor 43 Tahun 2011 dinyatakan tetap berlaku.</p>
+				<p>“Orang Asing sebagaimana dimaksud dibebaskan dari kewajiban memiliki Visa kunjungan dalam rangka tugas pemerintahan, pendidikan, sosial budaya, wisata, bisnis, keluarga, jurnalistik, atau singgah untuk meneruskan perjalanan ke negara lain,” bunyi Pasal 6 Ayat (3) Peraturan Presiden Nomor 69 Tahun 2015 itu.</p>
+				<p>Orang Asing sebagaimana dimaksud dapat masuk ke Wilayah Indonesia melalui seluruh Tempat Pemeriksaan Imigrasi, dan memperoleh izin tinggal kunjungan untuk waktu paling lama 30 (tiga puluh) hari dan tidak dapat diperpanjang masa berlakunya atau dialihstatuskan menjadi izin  tinggal lainnya.</p>
+				<p>Dengan berlakukan Perpres No. 69 Tahun 2015 ini, maka Keputusan Presiden Nomor 18 Tahun 2003 yang telah beberapa kali diubah terakhir dengan Peraturan Presiden Nomor 43 Tahun 2011 dicabut, dan dinyatakan tidak berlaku.</p>
+				<p>“Peraturan Presiden ini mulai berlaku pada tanggal diundangkan,” bunyi Pasal 9 Pepres No. 69 Tahun 2015 yang telah diundangkan oleh Menteri Hukum dan HAM Yasonna Laoly pada tanggal 10 Juni 2015 itu.</p>
+				<p>45 negara</p>
+				<p>Dalam lampiran Perpres tersebut dicantumkan nama-nama 30 negara yang dinyatakan bebas Visa kunjungan untuk Tempat Pemeriksaan Imigrasi tertentu, yaitu: RRT, Rusia, Korea Selatan, Jepang, Amerika Serikat, Kanada, Selandia Baru, Meksiko, Inggris, Jerman Perancis, Belanda, Italia, Spanyol, Swiss, Belgia, Swedia, Austria, Denmark, Norwegia, Finlandia, Polandia, Hungaria, Ceko, Qatar, Uni Emirat Arab, Kuwait, Bahrain, Oman, dan Afrika Selatan.</p>
+				<p>Sementara Tempat Pemeriksaan Imigrasi tertentu yang bebas memberika Visa kunjungan kepada Orang Asing dari negara tersebut adalah: Bandara Soekarno Hatta (Jakarta), Ngurah Rai (Bali), Kuala Namu (Medan), Juanda (Surabaya), Hang Nadim (Batam), Pelabuhan Laut Sri Bintan, Pelabuhan Laut Sekupang, Pelabuhan Laut Batam Center, dan Pelabuhan Laut Tanjung Uban (Riau).</p>
+				<p>Adapun negara tertentu dan pemerintahan administrasi tertenu yang dinyatakan bebas Visa kunjungan ke Indonedia ada 13 (tiga belas), yaitu: Thailand, Malaysia, Singapura, Brunei Darussalam, Filipina, Chili, Maroko, Peru, Vietnam, Ekuador, Kamboja, Laos, dan Myanmar.</p>
+				<p>Sedang Pemerintahan Administratif Khusus dari negara tertentu yang bebas Visa kunjungan ke Indonesia sebagai tertuang dalam lampiran Perpres itu ada 2 (dua), yaitu Hongkong dan Makao.</p>
 			</div>
 			
 			
