--- a/politik_index.html
+++ b/politik_index.html
@@ -301,7 +301,7 @@
 		</div>
 		<div class="footer">
 			<h2><a href="index.html">M-News</a></h2>
-			<p>Copyright © 2015 Grup Server TI-C Pagi Mikroskil <a href="http://samhunt.16mb.com">www.servertic.16mb.com</a></p>
+			<p>Copyright &copy; 2016 Tugas Kelompok TKPPL TI-D Pagi Mikroskil <a href="http://samhunt.16mb.com">www.servertic.16mb.com</a></p>
 		</div> <!--/ .footer -->
 	</div>
 
